--- a/src/app/addtodo/addtodo.component.css
+++ b/src/app/addtodo/addtodo.component.css
@@ -1,45 +1,45 @@
-
 body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f4f4f4;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  box-sizing: border-box;
+  background-color: #f4f4f4;
 }
 
 #todo-container {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
+  max-width: 600px;
+  margin: 20px auto;
   padding: 20px;
-  text-align: center;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 #todo-heading {
   font-size: 24px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  color: #333;
 }
 
 #todo-input {
-  width: 70%;
-  padding: 8px;
-  border: 1px solid #ccc;
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
   border-radius: 4px;
   outline: none;
 }
 
 #add-button {
-  background-color: #4caf50;
-  color: #fff;
+  width: 100%;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
   border: none;
-  padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s ease;
 }
 
 #add-button:hover {
@@ -49,32 +49,61 @@ body {
 #todo-list {
   list-style-type: none;
   padding: 0;
-  margin-top: 20px;
 }
 
 .todo-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 10px;
   padding: 10px;
-  border-bottom: 1px solid #ccc;
+  background-color: #fff;
+  transition: box-shadow 0.3s ease;
 }
 
-.delete-button {
-  display: none;
-  background-color: #ff3333;
-  color: #fff;
+.todo-item:hover {
+  box-shadow: 0 0 5px rgba(196, 46, 46, 0.1);
+}
+
+.todo-item span {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.delete-button,
+.edit-button {
+  padding: 8px;
   border: none;
-  padding: 4px 8px;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  margin: 10px;
+  transition: background-color 0.3s ease, rgb(213, 77, 77)or 0.s ease;
 }
 
-.todo-item:hover .delete-button {
-  display: block;
+.delete-button:hover,
+.edit-button:hover {
+  background-color: #ddd;
+  color: #333;
 }
 
-.delete-button:hover {
-  background-color: #e60000;
+@media only screen and (max-width: 600px) {
+  #todo-container {
+    padding: 10px;
+  }
+
+  #todo-input {
+    margin-bottom: 5px;
+  }
+
+  .todo-item {
+    flex-direction: column;
+  }
+
+  .delete-button,
+  .edit-button {
+    margin-top: 5px;
+    margin-left: 0;
+  }
 }
