--- a/src/app/addtodo/addtodo.component.html
+++ b/src/app/addtodo/addtodo.component.html
@@ -19,6 +19,7 @@
         <div>
           <button class="delete-button" (click)="deleteTodoConfirmation(item.id)" >Delete</button>
         </div>
+        <span style="font-size: 10px; color: gray;">Time:</span>
       </li>
     </ul>
   </div>
